--- a/index.ipynb
+++ b/index.ipynb
@@ -229,7 +229,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "biased = np.array\n",
+    "biased = np.array(pmf) * np.array()\n",
     "\n",
     "biased_sum = None\n",
     "\n",
