--- a/index.ipynb
+++ b/index.ipynb
@@ -225,13 +225,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(array([2.295, 2.97 , 6.561, 2.592, 3.996, 5.67 , 3.196, 2.132, 3.078]), 32.49)"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "biased = np.array(pmf) * np.array(sizes)\n",
     "\n",
-    "biased_sum = None\n",
+    "biased_sum = biased.sum()\n",
     "\n",
     "biased, biased_sum\n",
     "\n",
