Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -263,7 +263,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pmf2 = [round(x/,3) fo]\n",
+    "pmf2 = [round(x/biased.sum(),3) for x  ]\n",
     "\n",
     "\n",
     "sizes, pmf2\n",
