--- a/index.ipynb
+++ b/index.ipynb
@@ -259,11 +259,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "([17, 22, 27, 32, 37, 42, 47, 52, 57],\n",
+       " [0.071, 0.091, 0.202, 0.08, 0.123, 0.175, 0.098, 0.066, 0.095])"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "pmf2 = [round(x/biased.sum(),3) for x  ]\n",
+    "pmf2 = [round(x/biased.sum(),3) for x in biased]\n",
     "\n",
     "\n",
     "sizes, pmf2\n",
