--- a/index.ipynb
+++ b/index.ipynb
@@ -297,7 +297,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "mu_biased = None\n",
+    "mu_biased = pmf2.mean()\n",
     "mu_biased\n",
     "\n",
     "# 36.577"
