Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -309,7 +309,7 @@
     }
    ],
    "source": [
-    "mu_biased = pmf2.mean\n",
+    "mu_biased = np.array(pmf2).mean\n",
     "mu_biased\n",
     "\n",
     "# 36.577"
