Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -308,7 +308,7 @@
     }
    ],
    "source": [
-    "mu_biased = np.array(pmf2).mean()\n",
+    "mu_biased = np.multiply()\n",
     "mu_biased\n",
     "\n",
     "# 36.577"
