Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -293,22 +293,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "4.064111111111111"
+       "36.577"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "mu_biased = np.multiply(np.array(sizes),np.array(pmf2)).mean()\n",
+    "mu_biased = np.multiply(np.array(sizes),np.array(pmf2)).sum()\n",
     "mu_biased\n",
     "\n",
     "# 36.577"
