--- a/index.ipynb
+++ b/index.ipynb
@@ -334,7 +334,8 @@
    "source": [
     "# Plot pmfs side by side\n",
     "new_figure = plt.figure(figsize=(14, 5.5))\n",
-    "\n"
+    "\n",
+    "plt.bar()"
    ]
   },
   {
