Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -356,8 +356,8 @@
     "# Plot pmfs side by side\n",
     "new_figure = plt.figure(figsize=(14, 5.5))\n",
     "\n",
-    "plt.bar(pmf);\n",
-    "plt.bar(pmf2)"
+    "plt.bar(sizws,pmf);\n",
+    "plt.bar(,pmf2)"
    ]
   },
   {
