--- a/index.ipynb
+++ b/index.ipynb
@@ -359,7 +359,8 @@
     "new_figure = plt.figure(figsize=(14, 5.5))\n",
     "\n",
     "plt.bar(sizes,pmf);\n",
-    "plt.bar(sizes,pmf2)"
+    "plt.bar(sizes,pmf2);\n",
+    "plt.show()"
    ]
   },
   {
