--- a/index.ipynb
+++ b/index.ipynb
@@ -328,6 +328,54 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import plotly.graph_objects as go\n",
+    "\n",
+    "months = ['Jan', 'Feb', 'Mar', 'Apr', 'May', 'Jun',\n",
+    "          'Jul', 'Aug', 'Sep', 'Oct', 'Nov', 'Dec']\n",
+    "\n",
+    "fig = go.Figure()\n",
+    "fig.add_trace(go.Bar(\n",
+    "    x=months,\n",
+    "    y=[20, 14, 25, 16, 18, 22, 19, 15, 12, 16, 14, 17],\n",
+    "    name='Primary Product',\n",
+    "    marker_color='indianred'\n",
+    "))\n",
+    "fig.add_trace(go.Bar(\n",
+    "    x=months,\n",
+    "    y=[19, 14, 22, 14, 16, 19, 15, 14, 10, 12, 12, 16],\n",
+    "    name='Secondary Product',\n",
+    "    marker_color='lightsalmon'\n",
+    "))\n",
+    "\n",
+    "# Here we modify the tickangle of the xaxis, resulting in rotated labels.\n",
+    "fig.update_layout(barmode='group', xaxis_tickangle=-45)\n",
+    "fig.show()\n",
+    "Jan\n",
+    "Feb\n",
+    "Mar\n",
+    "Apr\n",
+    "May\n",
+    "Jun\n",
+    "Jul\n",
+    "Aug\n",
+    "Sep\n",
+    "Oct\n",
+    "Nov\n",
+    "Dec\n",
+    "0\n",
+    "5\n",
+    "10\n",
+    "15\n",
+    "20\n",
+    "25\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 13,
    "metadata": {},
    "outputs": [
