--- a/index.ipynb
+++ b/index.ipynb
@@ -353,8 +353,7 @@
     "\n",
     "# Here we modify the tickangle of the xaxis, resulting in rotated labels.\n",
     "fig.update_layout(barmode='group', xaxis_tickangle=-45)\n",
-    "fig.show()\n",
-    "J25\n"
+    "fig.show()\n"
    ]
   },
   {
