--- a/index.ipynb
+++ b/index.ipynb
@@ -339,13 +339,13 @@
     "\n",
     "fig = go.Figure()\n",
     "fig.add_trace(go.Bar(\n",
-    "    x=months,\n",
+    "    x=sizes,\n",
     "    y=[20, 14, 25, 16, 18, 22, 19, 15, 12, 16, 14, 17],\n",
     "    name='Primary Product',\n",
     "    marker_color='indianred'\n",
     "))\n",
     "fig.add_trace(go.Bar(\n",
-    "    x=months,\n",
+    "    x=sizes,\n",
     "    y=[19, 14, 22, 14, 16, 19, 15, 14, 10, 12, 12, 16],\n",
     "    name='Secondary Product',\n",
     "    marker_color='lightsalmon'\n",
