Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -340,13 +340,13 @@
     "fig = go.Figure()\n",
     "fig.add_trace(go.Bar(\n",
     "    x=sizes,\n",
-    "    y=[20, 14, 25, 16, 18, 22, 19, 15, 12, 16, 14, 17],\n",
+    "    y=pmf,\n",
     "    name='Primary Product',\n",
     "    marker_color='indianred'\n",
     "))\n",
     "fig.add_trace(go.Bar(\n",
     "    x=sizes,\n",
-    "    y=[19, 14, 22, 14, 16, 19, 15, 14, 10, 12, 12, 16],\n",
+    "    y=pmf2,\n",
     "    name='Secondary Product',\n",
     "    marker_color='lightsalmon'\n",
     "))\n",
