Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -341,13 +341,13 @@
     "fig.add_trace(go.Bar(\n",
     "    x=sizes,\n",
     "    y=pmf,\n",
-    "    name='Primary Product',\n",
+    "    name='Pmf',\n",
     "    marker_color='indianred'\n",
     "))\n",
     "fig.add_trace(go.Bar(\n",
     "    x=sizes,\n",
     "    y=pmf2,\n",
-    "    name='Secondary Product',\n",
+    "    name='pmf2',\n",
     "    marker_color='lightsalmon'\n",
     "))\n",
     "\n",
