--- a/index.ipynb
+++ b/index.ipynb
@@ -1299,7 +1299,7 @@
     "plt.figure(figsize=(8, 5))\n",
     "\n",
     "\n",
-    "plt.bar(sizes,pmf);\n",
+    "plt.bar(sizes,pmf,);\n",
     "plt.bar(sizes,pmf2);\n",
     "\n",
     "plt.show()"
