Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1278,7 +1278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -1299,7 +1299,7 @@
     "plt.figure(figsize=(8, 5))\n",
     "\n",
     "\n",
-    "plt.bar(sizes,pmf,alp);\n",
+    "plt.bar(sizes,pmf,alpha=.8);\n",
     "plt.bar(sizes,pmf2);\n",
     "\n",
     "plt.show()"
